--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -392,7 +392,7 @@ nextcloud:
     user: nextcloud
 
     ## Database password
-    password: ""
+    password: changeme
 
     ## Database name
     database: nextcloud
@@ -405,43 +405,6 @@ nextcloud:
       passwordKey: db-password
       # hostKey: db-hostname-or-ip
       # databaseKey: db-name
-
-  ##
-  ## MariaDB chart configuration
-  ## ref: https://github.com/bitnami/charts/tree/main/bitnami/mariadb
-  ##
-  mariadb:
-    ## Whether to deploy a mariadb server from the bitnami mariab db helm chart
-    # to satisfy the applications database requirements. if you want to deploy this bitnami mariadb, set this and externalDatabase to true
-    # To use an ALREADY DEPLOYED mariadb database, set this to false and configure the externalDatabase parameters
-    enabled: false
-
-    # see: https://github.com/bitnami/charts/tree/main/bitnami/mariadb#global-parameters
-    global:
-      # overwrites the primary.persistence.storageClass value
-      defaultStorageClass: ""
-
-    auth:
-      database: nextcloud
-      username: nextcloud
-      password: changeme
-      # Use existing secret (auth.rootPassword, auth.password, and auth.replicationPassword will be ignored).
-      # secret must contain the keys mariadb-root-password, mariadb-replication-password and mariadb-password
-      existingSecret: ""
-
-    architecture: standalone
-
-    ## Enable persistence using Persistent Volume Claims
-    ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
-    ##
-    primary:
-      persistence:
-        enabled: false
-        # Use an existing Persistent Volume Claim (must be created ahead of time)
-        existingClaim: ""
-        storageClass: ""
-        accessMode: ReadWriteOnce
-        size: 8Gi
 
   ##
   ## PostgreSQL chart configuration
@@ -489,7 +452,7 @@ nextcloud:
       existingSecretPasswordKey: ""
     # Since Redis is used for caching only, you might want to use a storageClass with different reclaim policy and backup settings
     global:
-      storageClass: ""
+      storageClass: longhorn
     master:
       persistence:
         enabled: true
@@ -592,7 +555,7 @@ nextcloud:
   ##
   persistence:
     # Nextcloud Data (/var/www/html)
-    enabled: false
+    enabled: true
     annotations: {}
     ## nextcloud data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
@@ -606,7 +569,7 @@ nextcloud:
     ## A manually managed Persistent Volume and Claim
     ## Requires persistence.enabled: true
     ## If defined, PVC must be created manually before volume will be bound
-    # existingClaim:
+    existingClaim: nextcloud-data-pvc
 
     accessMode: ReadWriteOnce
     size: 8Gi
@@ -755,7 +718,7 @@ nextcloud:
   ## Prometheus Exporter / Metrics
   ##
   metrics:
-    enabled: false
+    enabled: true
 
     replicaCount: 1
     # Optional: becomes NEXTCLOUD_SERVER env var in the nextcloud-exporter container.
