--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -144,17 +144,12 @@ nextcloud:
         sse_c_key: ""
         # use an existingSecret for S3 credentials. If set, we ignore the following under nextcloud.objectStore.s3
         # endpoint, accessKey, secretKey
-        existingSecret: ""
+        existingSecret: nextcloud-s3-credentials
         secretKeys:
-          # key in nextcloud.objectStore.s3.existingSecret to use for s3 endpoint
-          host: ""
-          # key in nextcloud.objectStore.s3.existingSecret to use for s3 accessKeyID
-          accessKey: ""
-          # key in nextcloud.objectStore.s3.existingSecret to use for s3 secretAccessKey
-          secretKey: ""
-          # key in nextcloud.objectStore.s3.existingSecret to use for the s3 bucket
-          bucket: ""
-          # key in nextcloud.objectStore.s3.existingSecret to use for the s3 sse_c_key
+          host: "host"
+          accessKey: "accessKey"
+          secretKey: "secretKey"
+          bucket: "bucket"
           sse_c_key: ""
       ## options related to using Swift as a primary object storage
       # https://docs.nextcloud.com/server/latest/admin_manual/configuration_files/primary_storage.html#openstack-swift
