--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -125,9 +125,9 @@ nextcloud:
         # s3 endpoint to use; only required if you're not using AWS
         host: ""
         # use TLS/SSL for S3 connections
-        ssl: true
+        ssl: false
         # default port that can be changed based on your object store, e.g. for minio, you can use 9000
-        port: "443"
+        port: "9000"
         # this is the default in the nextcloud docs
         region: "eu-west-1"
         # required if using s3, the name of the bucket you'd like to use
