--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -127,9 +127,9 @@ nextcloud:
         # use TLS/SSL for S3 connections
         ssl: false
         # default port that can be changed based on your object store, e.g. for minio, you can use 9000
-        port: "9000"
+        port: "35778"
         # this is the default in the nextcloud docs
-        region: "eu-west-1"
+        region: "nasaurus"
         # required if using s3, the name of the bucket you'd like to use
         bucket: ""
         # object prefix in bucket
