--- a/prod/data/minio/Chart.yaml
+++ b/prod/data/minio/Chart.yaml
@@ -4,4 +4,4 @@ version: 1.0.0
 dependencies:
   - name: minio
     version: 8.0.10
-    repository: https://helm.min.io
+    repository: https://helm.min.io/minio
