--- a/prod/data/minio/Chart.yaml
+++ b/prod/data/minio/Chart.yaml
@@ -3,5 +3,5 @@ name: minio
 version: 1.0.0
 dependencies:
   - name: minio
-    version: 8.0.10
-    repository: https://helm.min.io
+    version: 15.0.0
+    repository: https://charts.bitnami.com/bitnami
