--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -596,7 +596,7 @@ nextcloud:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    storageClass: "nfs"
+    storageClass: "iscsi-storage"
 
     ## A manually managed Persistent Volume and Claim
     ## Requires persistence.enabled: true
