--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -596,12 +596,12 @@ nextcloud:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    storageClass: "iscsi-storage"
+    # storageClass: "iscsi-storage"
 
     ## A manually managed Persistent Volume and Claim
     ## Requires persistence.enabled: true
     ## If defined, PVC must be created manually before volume will be bound
-    # existingClaim: nextcloud-data-pvc
+    existingClaim: nextcloud-data-iscsi-pvc
 
     accessMode: ReadWriteOnce
     size: 100Gi
