--- a/prod/apps/nextcloud/values.yaml
+++ b/prod/apps/nextcloud/values.yaml
@@ -95,7 +95,8 @@ nextcloud:
     persistence:
       subPath:
     # if set, we'll template this list to the NEXTCLOUD_TRUSTED_DOMAINS env var
-    trustedDomains: []
+    trustedDomains:
+      - "nextcloud.azaurus.dev"
     ## SMTP configuration
     mail:
       enabled: false
