--- a/prod/apps/jellyseer/Chart.yaml
+++ b/prod/apps/jellyseer/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: jellyseer
 version: 1.0.0
 dependencies:
-  - name: arr-stack/jellyseerr
+  - name: jellyseerr
     version: 0.2.4
-    repository: https://bubylou.github.io/Arr-Stack
+    repository: https://bubylou.github.io/Arr-Stack/arr-stack/
