--- a/prod/apps/sonarr/chart.yaml
+++ b/prod/apps/sonarr/chart.yaml
@@ -3,5 +3,5 @@ name: sonarr
 version: 1.0.0
 dependencies:
   - name: sonarr
-    version: 2.0.0
-    repository: oci://ghcr.io/m0nsterrr/helm-charts
+    version: 4.0.12
+    repository: https://loeken.github.io/helm-charts
