--- a/prod/apps/sonarr/chart.yaml
+++ b/prod/apps/sonarr/chart.yaml
@@ -4,4 +4,4 @@ version: 1.0.0
 dependencies:
   - name: sonarr
     version: 4.0.12
-    repository: https://loeken.github.io/helm-charts
+    repository: https://loeken.github.io/helm-charts/
