--- a/prod/apps/radarr/chart.yaml
+++ b/prod/apps/radarr/chart.yaml
@@ -3,5 +3,5 @@ name: radarr
 version: 1.0.0
 dependencies:
   - name: radarr
-    version: 2.0.0
-    repository: oci://ghcr.io/m0nsterrr/helm-charts
+    version: 1.12.0
+    repository: https://charts.alekc.dev
