--- a/prod/apps/sonarr/values.yaml
+++ b/prod/apps/sonarr/values.yaml
@@ -9,6 +9,7 @@ sonarr:
     additionalVolumes: []
     # -- if you need any additional volume mounts, you can define them here
     additionalMounts: 
-      - mountPath: /shows
+      - name: shows
+        mountPath: /shows
         type: pvc
         existingClaim: shows-pvc
