--- a/prod/apps/sonarr/values.yaml
+++ b/prod/apps/sonarr/values.yaml
@@ -6,10 +6,12 @@ sonarr:
     accessMode: ReadWriteOnce
     size: 800Mi
     # -- if you need any additional volumes, you can define them here
-    additionalVolumes: []
+    additionalVolumes: 
+      - name: shows
+        persistentVolumeClaim:
+          claimName: shows-pvc
     # -- if you need any additional volume mounts, you can define them here
     additionalMounts: 
       - name: shows
         mountPath: /shows
-        type: pvc
-        existingClaim: shows-pvc
+
