adding downloads pvc to nzbget and qb

--- a/prod/apps/nzbget/values.yaml
+++ b/prod/apps/nzbget/values.yaml
@@ -3,4 +3,4 @@ nzbget:
       enabled: true
       mountPath: /downloads
       type: pvc
-      existingClaim: downloads
+      existingClaim: downloads-pvc
