--- a/prod/apps/qbittorrent/values.yaml
+++ b/prod/apps/qbittorrent/values.yaml
@@ -4,4 +4,4 @@ qbittorrent:
       enabled: true
       mountPath: /downloads
       type: pvc
-      existingClaim: downloads
+      existingClaim: downloads-pvc
