adding longhorn for config persistence qbittorrent

--- a/prod/apps/qbittorrent/values.yaml
+++ b/prod/apps/qbittorrent/values.yaml
@@ -1,5 +1,8 @@
 qbittorrent:
   persistence:
+    config:
+      enabled: true
+      storageClass: "longhorn"
     downloads:
       enabled: true
       mountPath: /downloads
