--- a/prod/apps/nzbget/values.yaml
+++ b/prod/apps/nzbget/values.yaml
@@ -1,6 +1,9 @@
 nzbget:
-  downloads:
+  persistence:
+    config:
       enabled: true
-      mountPath: /downloads
-      type: pvc
-      existingClaim: downloads-pvc
+    downloads:
+        enabled: true
+        mountPath: /downloads
+        type: pvc
+        existingClaim: downloads-pvc
