--- a/prod/apps/immich/Chart.yaml
+++ b/prod/apps/immich/Chart.yaml
@@ -3,5 +3,5 @@ name: immich
 version: 1.0.0
 dependencies:
   - name: immich
-    version: 0.2.5
-    repository: https://secustor.dev/helm-charts
+    version: 0.9.0
+    repository: https://immich-app.github.io/immich-charts
