--- a/prod/apps/immich/values.yaml
+++ b/prod/apps/immich/values.yaml
@@ -44,7 +44,7 @@ immich:
   # The postgres subchart is deprecated and will be removed in chart version 0.10.0
   # See https://github.com/immich-app/immich-charts/issues/149 for more detail.
   postgresql:
-    enabled: false
+    enabled: true
     image:
       repository: tensorchord/pgvecto-rs
       tag: pg14-v0.2.0
