--- a/prod/apps/immich/values.yaml
+++ b/prod/apps/immich/values.yaml
@@ -6,7 +6,7 @@ immich:
 # These entries are shared between all the Immich components
 
   env:
-    REDIS_HOSTNAME: '{{ printf "%s-redis-master" .Release.Name }}'
+    REDIS_HOSTNAME: 'apps-immich-prod-redis-master'
     DB_HOSTNAME: "immich-postgres-rw.default.svc.cluster.local"
     DB_USERNAME: "immich"
     DB_DATABASE_NAME: "immich"
