--- a/prod/access/traefik-ingress/values.yaml
+++ b/prod/access/traefik-ingress/values.yaml
@@ -188,7 +188,7 @@ traefik:
   ingressRoute:
     dashboard:
       # -- Create an IngressRoute for the dashboard
-      enabled: true
+      enabled: false
       # -- Additional ingressRoute annotations (e.g. for kubernetes.io/ingress.class)
       annotations: {}
       # -- Additional ingressRoute labels (e.g. for filtering IngressRoute by custom labels)
