--- a/prod/access/ingresses/jellyfin-ingress.yaml
+++ b/prod/access/ingresses/jellyfin-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jellyfin-ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: access-traefik-ingress-prod
+    kubernetes.io/ingress.class: traefik
 spec:
   rules:
   - host: jellyfin.azaurus.dev
