--- a/prod/access/ingresses/immich-ingress.yaml
+++ b/prod/access/ingresses/immich-ingress.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: apps-immich-prod
+            name: apps-immich-prod-server
             port:
               number: 2283
