fixed SA in prometheus

--- a/prod/monitoring/prometheus/prometheus.yaml
+++ b/prod/monitoring/prometheus/prometheus.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus
 spec:
   replicas: 1
-  serviceAccountName: prometheus
+  serviceAccountName: monitoring-prometheus-oper
   serviceMonitorSelector: {} 
   resources:
     requests:
