--- a/prod/monitoring/service-monitors/fritzbox-exporter-sm.yaml
+++ b/prod/monitoring/service-monitors/fritzbox-exporter-sm.yaml
@@ -9,7 +9,7 @@ spec:
     matchLabels:
       app: fritz-exporter
   endpoints:
-    - port: 9787
+    - port: "9787"
       path: /metrics
       interval: 30s
       scrapeTimeout: 10s
