--- a/prod/monitoring/jellyfin-monitoring/secret.yaml
+++ b/prod/monitoring/jellyfin-monitoring/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: json-exporter-secret
 type: Opaque
 data:
-  api-token: "YOUR_BASE64_ENCODED_TOKEN"  # Replace with `echo -n "YOUR_TOKEN_HERE" | base64`
+  api-token: cGFzc3dvcmQ=
