--- a/prod/apps/uptime/Chart.yaml
+++ b/prod/apps/uptime/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: uptime
 version: 1.0.0
 dependencies:
-  - name: uptime
+  - name: uptime-kuma
     version: 2.21.2
     repository: https://dirsigler.github.io/uptime-kuma-helm
