--- a/prod/access/ingresses/uptime-ingress.yaml
+++ b/prod/access/ingresses/uptime-ingress.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: apps-blog-prod-ghost
+            name: apps-uptime-prod-uptime-kuma
             port:
-              number: 443
+              number: 3001
