--- a/prod/access/ingresses/gogs-ingress.yaml
+++ b/prod/access/ingresses/gogs-ingress.yaml
@@ -1,19 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: gitea-ingress
+  name: gogs-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host: gitea.azaurus.dev
+  - host: gogs.azaurus.dev
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: apps-gitea-prod-http
+            name: apps-gogs-prod
             port:
               number: 3000
