--- a/prod/access/ingresses/gogs-ingress.yaml
+++ b/prod/access/ingresses/gogs-ingress.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: apps-gogs-prod
+            name: gogs-svc
             port:
               number: 3000
