--- a/prod/apps/gogs/deployment.yml
+++ b/prod/apps/gogs/deployment.yml
@@ -25,6 +25,8 @@ spec:
         env:
         - name: SOCAT_LINK
           value: "false"
+        - name: DISABLE_REGISTRATION
+          value: "true"
         volumeMounts:
         - name: gogs-persistent-storage
           mountPath: /data
