--- a/prod/apps/gogs/deployment.yml
+++ b/prod/apps/gogs/deployment.yml
@@ -28,7 +28,12 @@ spec:
         volumeMounts:
         - name: gogs-persistent-storage
           mountPath: /data
+        - name: gogs-persistent-config
+          mountPath: /custom/conf
       volumes:
       - name: gogs-persistent-storage
         persistentVolumeClaim:
           claimName: gogs-pv-claim
+      - name: gogs-persistent-config
+        persistentVolumeClaim:
+          claimName: gogs-config-pv-claim
