--- a/prod/apps/jellyfin/values.yaml
+++ b/prod/apps/jellyfin/values.yaml
@@ -3,6 +3,7 @@ jellyfin:
     config:
       enabled: true
       size: 2Gi
+      accessMode: ReadWriteOnce
     movies:
         enabled: true
         mountPath: /movies
