--- a/prod/apps/jellyfin/Chart.yaml
+++ b/prod/apps/jellyfin/Chart.yaml
@@ -3,5 +3,5 @@ name: jellyfin
 version: 1.0.0
 dependencies:
   - name: jellyfin
-    version: 10.10.6
-    repository: https://loeken.github.io/helm-charts
+    version: 3.2.6
+    repository: https://djjudas21.github.io/charts/
