--- a/prod/apps/mc/values.yaml
+++ b/prod/apps/mc/values.yaml
@@ -1,7 +1,7 @@
 minecraft:
     # ref: https://hub.docker.com/r/itzg/minecraft-server/
   image:
-    repository: itzg/minecraft-serve
+    repository: itzg/minecraft-server
     tag: latest
     pullPolicy: Always
     pullSecret: ""
@@ -172,7 +172,7 @@ minecraft:
 
   minecraftServer:
     # This must be overridden, since we can't accept this for the user.
-    eula: "FALSE"
+    eula: "TRUE"
     # One of: LATEST, SNAPSHOT, or a specific version (ie: "1.7.9").
     version: "LATEST"
     ## The type of Minecraft server to run, check for related settings below
