--- a/prod/apps/mc/values.yaml
+++ b/prod/apps/mc/values.yaml
@@ -282,7 +282,7 @@ minecraft:
     # Require public key to be signed by Mojang to join
     enforceSecureProfile: default
     # If you adjust this, you may need to adjust resources.requests above to match.
-    memory: 4096
+    memory: 4g
     # General JVM options to be passed to the Minecraft server invocation
     jvmOpts: ""
     # Options like -X that need to proceed general JVM options
