--- a/prod/apps/mc/values.yaml
+++ b/prod/apps/mc/values.yaml
@@ -181,7 +181,7 @@ minecraft-java:
               # FTB_MODPACK_VERSION_ID: ""
               # CF_SERVER_MOD: ""
               # CF_BASE_DIR: ""
-              USE_MODPACK_START_SCRIPT: true
+              # USE_MODPACK_START_SCRIPT: true
               # FTB_LEGACYJAVAFIXER: false
               # WHITELIST: ""
               # OPS: ""
@@ -196,9 +196,9 @@ minecraft-java:
               # JVM_OPTS: ""
               # JVM_XX_OPTS: ""
               CF_API_KEY: ""
-              CF_PAGE_URL: https://www.curseforge.com/minecraft/modpacks/all-the-mods-10/files/6313628
-              CF_SLUG: all-the-mods-10
-              CF_FILE_ID: "6313628"
+              CF_PAGE_URL: https://www.curseforge.com/minecraft/modpacks/all-the-mods-9/files/6322046
+              # CF_SLUG: all-the-mods-8
+              # CF_FILE_ID: "4248390"
               # CF_FILENAME_MATCHER: 1.0.7
               # CF_EXCLUDE_MODS: |
               #   embeddium
