--- a/prod/apps/mc/values.yaml
+++ b/prod/apps/mc/values.yaml
@@ -1,59 +1,59 @@
 minecraft-java:
   image:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0@sha256:1ff47453ce66194927313d628c32a485c34d0acc9c01c9dbd643584c50cf89e6
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0@sha256:17096d38598b4f856467eba656077c8f8b0dfb282582c9aa6b3e77802ba1a209
     pullPolicy: Always
   j21Image:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java21@sha256:1ff47453ce66194927313d628c32a485c34d0acc9c01c9dbd643584c50cf89e6
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java21@sha256:17096d38598b4f856467eba656077c8f8b0dfb282582c9aa6b3e77802ba1a209
     pullPolicy: Always
   j21graalvmImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java21-graalvm@sha256:497249e19a9d79b06381ae031ab6be707df9bfa570fbb3c243041e3b436c4bab
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java21-graalvm@sha256:72924dceca522e4282d4362d6738c0f119eae805b3bc92309244b39239f3ae92
     pullPolicy: Always
   j21alpineImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java21-alpine@sha256:aa06626784a8d6932acec4e49ad319a42844527bacab0db0039a8a1093b62e7f
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java21-alpine@sha256:23f5517980f7337aaed2134b2dad63bbd0752be95c26bbc153dc345a3af949a4
     pullPolicy: Always
   j17Image:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java17@sha256:10dad62a01e35a0eeba69e99f9c425ea0c190d19cf1aa35b9c8323819d884067
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java17@sha256:3435cac0f0fbf6281f06c4b1b6b58bddb75d66fe316780b5f821d52f90948dff
     pullPolicy: Always
   j17jdkImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java17-jdk@sha256:1ce891579630a5a42d0855a7e5b75f67fc56ed4479d68f675ae8ae8a6c1a658d
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2024.6.1-java17-jdk@sha256:2c43fcede436aff9f50b1adf4448d55d221651be471ef41412232c141bfa89f6
     pullPolicy: Always
   j17graalvmImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java17-graalvm@sha256:201f19e4ec865a773133248412db7b19baac80975e865097eff30fee97df8472
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java17-graalvm@sha256:b7430bdae890ab7c66cb653883ea7156cb3c00c56ce117298cfc54a804e7753e
     pullPolicy: Always
   j17alpineImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java17-alpine@sha256:f5ff1496dbb72e38c7a9a8d17de09801547a673a5aeb4fcb2e0d2741d430c4a6
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java17-alpine@sha256:3d51646272c0f7bf9edaf03f2ed6555924c4f6d67c13e15553c2f8f994de64ad
     pullPolicy: Always
   j11Image:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java11@sha256:adc511e884945e206b0401a74e394dd4de8ae0f184e9029bd752e2a9c1041ed2
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java11@sha256:0674f4ff8b7e3e025fc0e0937f09dac5aa08afe37f262f6825a50937eaaca178
     pullPolicy: Always
   j8Image:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java8@sha256:2d0dab4bc81e0e20b35ff18208b27808e362100b6ab75c87b7ad395be01883f4
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java8@sha256:7a7a5e2e0d78eab3bd482188f16820f1aed09aa83c1c4969524031aa71e1632a
     pullPolicy: Always
   j8graalvmImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java8-graalvm-ce@sha256:5066dead723873a87344a606c973e825a39fd88993d0fb0ba408aba9cd7688a9
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java8-graalvm-ce@sha256:e50828d677ad14e28bdfff9da6e67f082a706ab757fabc6a7d459057aa0d9558
     pullPolicy: Always
   j8jdkImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java8-jdk@sha256:36517180605128ffa1aae846ffcd3902e5fd480b599dc3c175a08559334e352a
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2025.3.0-java8-jdk@sha256:42fdd954df570492f9df49a2e0caeb5b11aeb5b359d92b8eaaee8ecb9d4a34ff
     pullPolicy: Always
   j8alpineImage:
-    repository: itzg/minecraft-server
-    tag: 2024.5.0-java8-alpine@sha256:33f47910edf341758f5a18e233f3e185ac3ea6a2765462749ff25a1d8dbeded4
+    repository: ghcr.io/itzg/minecraft-server
+    tag: 2024.9.0-java8-alpine@sha256:ee8505b9670a82b7703ec35b2a87fe9b7f7823b50ae50fad18bf1fe511e577f9
     pullPolicy: Always
   mcBackupImage:
-    repository: itzg/mc-backup
-    tag: latest@sha256:9dd26ec090b96193927d224e44afeac1a5d6980505fe5cac54bba6f03b65f34c
+    repository: docker.io/itzg/mc-backup
+    tag: latest@sha256:0e5e26f1e76530ed9464b69fe0f3eaf9eb7c5d6ceea4908a635393063d843dcf
     pullPolicy: Always
 
   service:
